WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143692
[iOS WK2] Interactive elements of developer.apple.com are broken
https://bugs.webkit.org/show_bug.cgi?id=143692
Summary
[iOS WK2] Interactive elements of developer.apple.com are broken
Simon Fraser (smfr)
Reported
2015-04-13 21:00:41 PDT
[iOS WK2] Interactive elements of developer.apple.com are broken
Attachments
Patch
(10.06 KB, patch)
2015-04-13 21:04 PDT
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-04-13 21:04:47 PDT
Created
attachment 250690
[details]
Patch
David Kilzer (:ddkilzer)
Comment 2
2015-04-14 02:35:05 PDT
<
rdar://problem/19320087
>
Sam Weinig
Comment 3
2015-04-14 08:50:25 PDT
Comment on
attachment 250690
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=250690&action=review
> Source/WebCore/ChangeLog:9 > + WHen a composited RenderLayer had nodes in the scrolling tree by virtue of
WHen -> When
> Source/WebCore/ChangeLog:14 > + Fix by having RnderLayerCompositor::updateScrollCoordinationForThisFrame()
RnderLayerCompositor -> RenderLayerCompositor
> LayoutTests/platform/ios-simulator-wk2/scrolling/remove-scrolling-role.html:41 > + window.setTimeout(function() {
Why do we need the 0-delay timer here?
Simon Fraser (smfr)
Comment 4
2015-04-14 10:25:07 PDT
(In reply to
comment #3
)
> Comment on
attachment 250690
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=250690&action=review
> > > Source/WebCore/ChangeLog:9 > > + WHen a composited RenderLayer had nodes in the scrolling tree by virtue of > > WHen -> When > > > Source/WebCore/ChangeLog:14 > > + Fix by having RnderLayerCompositor::updateScrollCoordinationForThisFrame() > > RnderLayerCompositor -> RenderLayerCompositor
This is what happens when typing over a slow VNC connection.
> > LayoutTests/platform/ios-simulator-wk2/scrolling/remove-scrolling-role.html:41 > > + window.setTimeout(function() { > > Why do we need the 0-delay timer here?
To get an initial layout with the pre-changed style.
Simon Fraser (smfr)
Comment 5
2015-04-14 10:26:54 PDT
https://trac.webkit.org/r182799
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug